<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="due2do.mobile.com.duetodo.create1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar3"
        android:layout_marginTop="8dp"
        android:text="@string/tasknamelabel"
        android:textColor="@color/colorDarkSlateGray"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#4B86B4"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="16dp"
        android:text="@string/datelabel"
        android:textColor="@color/colorDarkSlateGray"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateLabel"
        android:ems="10"
        android:inputType="date"
        android:textColor="#4B86B4" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorDarkSlateGray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_new_title"
        android:textColor="@color/colorLightSteelBlue"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ImageLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:text="@string/add_photo"
        android:textColor="@color/colorDarkSlateGray"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignEnd="@+id/editText4"
        android:layout_below="@+id/ImageLabel"
        android:layout_marginTop="16dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorDarkSlateGray"
        android:text="@string/add_task"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textColor="@color/colorLightSteelBlue"
        android:textColorLink="@color/colorLightSteelBlue" />

</RelativeLayout>
