<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/img"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

                <TextView
                    android:id="@+id/TaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name"
                    android:textColor="#2A4D69"
                    android:textSize="30sp"
                    android:textStyle="bold" />



            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/TaskTitle"
                android:text="@string/date_time"
                android:textColor="#4B86B4"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/date"
                android:text="@string/priority"
                android:textColor="#4B86B4"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/delevent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/priority"
                android:layout_alignParentEnd="true"
                android:background="@null"
                android:src="@drawable/ic_delete" />

            <ImageButton
                android:id="@+id/editEvent"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:background="@null"
                android:src="@drawable/ic_edit" />




        </RelativeLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>